@@ -1,3 +1,7 @@
+2004-03-12  Michal Ludvig  <mludvig@suse.cz>
+
+	* i386.h (i386_optab): Added xstore/xcrypt insns.
+
 2004-02-09  Anil Paranjpe  <anilp1@KPITCummins.com>
 
 	* h8300.h (32bit ldc/stc): Add relaxing support.
